Network.yml
Description: >
  This template is used to create and deploy a simple VPC with one public and one private subnet and associated gateways
  
Resources: 
  FridayHittVpc:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: "MH-VPC"
          
  FridayHittPubSubnet:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: eu-west-1a
      VpcId: !Ref FridayHittVpc
      CidrBlock: 10.0.0.0/28
      MapPublicIpOnLaunch: true        
      Tags: 
        - Key: Name
          Value: "MH-Public-Subnet"
            
  FridayHittPrvSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1a
      VpcId: !Ref FridayHittVpc
      CidrBlock: 10.0.1.0/28
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: "MH-Private-Subnet"
            
  FridayHittInetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: FridayHittVpc
    Properties:
      Tags:
        - Key: Name
          Value: "MH-Inet-Gateway"

  AttachInetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref FridayHittVpc
      InternetGatewayId: !Ref FridayHittInetGateway
      
  FridayHittElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: "MH-ElasticIP"

  FridayHittNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt [ FridayHittElasticIP, AllocationId ]
      SubnetId: !Ref FridayHittPrvSubnet
      Tags:
        - Key: Name
          Value: "MH-NATGateway"
          
  FridayHittPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref FridayHittVpc
      Tags: 
        - Key: Name
          Value: "MH-PublicRouteTable"

  FridayHittRouteToIGW:
    Type: AWS::EC2::Route
    DependsOn:
      - FridayHittInetGateway
      - AttachInetGateway
    Properties:
      RouteTableId: !Ref FridayHittPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref FridayHittInetGateway
              
  FridayHittPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref FridayHittVpc
      Tags:
        - Key: Name
          Value: "MH-PrivateRouteTable"
          
  FridayHittRouteToNAT:
    Type: AWS::EC2::Route
    DependsOn:  FridayHittRouteToIGW
    Properties:
      RouteTableId: !Ref FridayHittPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref FridayHittNatGateway
      
  PublicRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FridayHittPubSubnet
      RouteTableId: !Ref FridayHittPublicRouteTable
      
  PrivateRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
       SubnetId: !Ref FridayHittPrvSubnet
       RouteTableId: !Ref FridayHittPrivateRouteTable
       
# EC2 Instances:
   
  PrvEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-00385a401487aefa4
      SecurityGroupIds: [ !GetAtt PrvSecurityGrp.GroupId ]
      InstanceType: t2.micro
      SubnetId: !Ref FridayHittPrvSubnet
      KeyName: first-ec2-key-pair
      Tags: 
        - Key: Name
          Value: "MH-Private-EC2"
      
  PrvSecurityGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref FridayHittVpc
      GroupDescription: Enable HTTP access via port 80 + SSH
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0 #This should be refined to restricted list
          IpProtocol: tcp  
          FromPort: 80 # http
          ToPort: 80
        - CidrIp:  0.0.0.0/0 #This should be refined to restricted list
          IpProtocol: tcp
          FromPort: 22 # ssh
          ToPort: 22
 
  PubEC2Instance:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-00385a401487aefa4
      SecurityGroupIds: [ !GetAtt PubSecurityGrp.GroupId ]
      InstanceType: t2.micro
      SubnetId: !Ref FridayHittPubSubnet
      KeyName: first-ec2-key-pair
      Tags:
        - Key: Name
          Value: "MH-Public-EC2"
  
  PubSecurityGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref FridayHittVpc
      GroupDescription: Enable HTTP access via port 80 + SSH
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0 
          IpProtocol: tcp
          FromPort: 80 # http
          ToPort: 80
        - CidrIp:  0.0.0.0/0 #This should be refined to restricted list
          IpProtocol: tcp
          FromPort: 22 # ssh
          ToPort: 22     
  
# Bastion Instance:

  BastionInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-00385a401487aefa4
      SecurityGroupIds: [ !GetAtt BastionSecurityGrp.GroupId ]
      InstanceType: t2.micro
      SubnetId: !Ref FridayHittPubSubnet # Bastion needs to be on the public subnet 
      KeyName: first-ec2-key-pair
      Tags:
        - Key: Name
          Value: "MH-Bastion-EC2"
          
  BastionSecurityGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref FridayHittVpc
      GroupDescription: Enable Bastion access - inbound via shh and onward to internal EC2 instances in both subnets
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22 # ssh
          ToPort: 22

Outputs:  
  BastionPublicIp:
    Description: 'Bastion Public IP'
    Value: !Sub 'http://${BastionInstance.PublicIp}'
    Export:
      Name: BastionPublicIp
      
  PrivateEC2Ip:
    Description: 'Private EC2 private IP'
    Value: !Sub 'http://${PrvEC2Instance.PrivateIp}
    Export:
      Name: PrivateEC2prvIp
      
  PublicEC2Ip_prv:
    Description: 'Public EC2 private IP'
    Value: !Sub 'http://${PubEC2Instance.PrivateIp}   
    Export:
      Name: PublicEC2prvIp 

  PublicEC2Ip_pub:
    Desription: 'Public EC2 public IP'
    Value: !Sub 'http://${PubEC2Instance.PublicIp}
